--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  a {
+  a, button {
     color: black;
     padding: 10px;
     background: white;
